--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a target="_top" style="text-decoration: none;" href="#">Articles</a>
           &nbsp;&nbsp;
         </li>
-        <li><q>Some great <a href="">links</a> Enjoy</q></li>
+        <li><q>Some great <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">links</a> Enjoy</q></li>
       </ul>
 
       <hr>
@@ -38,7 +38,9 @@
       <hr>
     </div>
   </div>
-
+  <div>
+    This site {was,is,will be} in under construction
+  </div>
   <div align="left" id="internship">
     <h2>Internships</h2>
     <ol>
@@ -52,8 +54,8 @@
   <div align="left" id="projects">
     <h2>Projects</h2>
     <ol>
-      <li><a href="">A Simple Search Engine</a></li>
-      <li><a href="">Implement Maximum Heapable Subsequence</a></li>
+      <li><a href="https://github.com/cohitherewer/ISI-CS/tree/main/Information%20Retrieval/Simple%20Search%20Engine">A Simple Search Engine</a></li>
+      <li><a href="https://github.com/cohitherewer/ISI-CS/tree/main/CLAB%20Project">Implement Maximum Heapable Subsequence</a></li>
       <li><a href="">Restaurant Buddy-A recommendation system</a>
       </li>
       <li><a href="">B.E Thesis-High Voltage Contamination Prediction</a></li>
