--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           &nbsp;&nbsp;
           <a target="_top" style="text-decoration: none;" href="#">Publications</a>
           &nbsp;&nbsp;
-          <a target="_top" style="text-decoration: none;" href="#">Articles</a>
+          <a target="_top" style="text-decoration: none;" href="#">Presentations</a>
           &nbsp;&nbsp;
         </li>
         <li><q>Some great <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">links</a> Enjoy</q></li>
@@ -45,6 +45,10 @@
     <h2>Internships</h2>
     <ol>
       <li>
+        <h3>Airtel xLab</h3>
+        <p>Working on Some interesting problems</p>
+      </li>
+      <li>
         <h3>IIT, Kharagpur</h3>
         <p>Worked on Object Oriented Image Classification</p>
       </li>
@@ -56,11 +60,6 @@
     <ol>
       <li><a href="https://github.com/cohitherewer/ISI-CS/tree/main/Information%20Retrieval/Simple%20Search%20Engine">A Simple Search Engine</a></li>
       <li><a href="https://github.com/cohitherewer/ISI-CS/tree/main/CLAB%20Project">Implement Maximum Heapable Subsequence</a></li>
-      <li><a href="">Restaurant Buddy-A recommendation system</a>
-      </li>
-      <li><a href="">B.E Thesis-High Voltage Contamination Prediction</a></li>
-      <li><a href="">Movie Recommender System</a>
-      </li>
     </ol>
   </div>
 
@@ -69,6 +68,15 @@
     <ol>
       <li>
         Mathematical Morphology aided Random Forest Classifier based High Voltage Porcelain Insulator Contamination level Classification <a href="https://ieeexplore.ieee.org/document/9230691">[Publication]</a>
+      </li>
+    </ol>
+  </div>
+
+  <div>
+    <h2>Presentations</h2>
+    <ol>
+      <li>
+        Graph Algorithms <a href="Graph Algo Presentation 1">[slide 1]</a> <a href="Graph Algo Presentation 2">[slide 2]</a>
       </li>
     </ol>
   </div>
