--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <h2>Presentations</h2>
     <ol>
       <li>
-        Graph Algorithms <a href="Graph Algo Presentation 1">[slide 1]</a> <a href="Graph Algo Presentation 2">[slide 2]</a>
+        Graph Algorithms <a href="Graph Algo Presentation 1.pdf">[slide 1]</a> <a href="Graph Algo Presentation 2.pdf">[slide 2]</a>
       </li>
     </ol>
   </div>
