--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
+  <style>
+    *{
+      padding: 1;
+    }
+  </style>
 </head>
 <body>
   <div align="center">
@@ -32,7 +37,9 @@
       <hr>
 
       <ul>
-        <li  style="list-style-type:none;">Stuck in 421 loop</li>
+        <li  style="list-style-type:none;">
+          Hey, I'm <b>Abhinaba</b> and I'm currently stuck in 421 loop.
+        </li>
       </ul>
 
       <hr>
@@ -45,8 +52,8 @@
     <h2>Internships</h2>
     <ol>
       <li>
-        <h3>Airtel xLab</h3>
-        <p>Working on Some interesting problems</p>
+        <h3>Airtel Digital</h3>
+        <p>Worked on a data drift library</p>
       </li>
       <li>
         <h3>IIT, Kharagpur</h3>
@@ -77,6 +84,9 @@
     <ol>
       <li>
         Graph Algorithms <a href="Graph Algo Presentation 1.pdf">[slide 1]</a> <a href="Graph Algo Presentation 2.pdf">[slide 2]</a>
+      </li>
+      <li>
+        Test Case Generation for SI Protocol. <a href="Test Gen SI.pdf">[slide]</a>
       </li>
     </ol>
   </div>
