--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <style>
     body 
     {
-     font-family:'Sorts Mill Goudy', Georgia, serif;
-   }
+      padding: 5vw 5vh;
+      padding-top: 1vh;
+      font-family:'Sorts Mill Goudy', Georgia, serif;
+    }
 
-   h1, h2, h3, h4, h5, h6 
-   {
+    h1, h2, h3, h4, h5, h6 
+    {
      font-family:'Oswald',Impact,'Arial Black',Arial,Helvetica,sans-serif;
    }
 
@@ -53,7 +55,7 @@
           &nbsp;&nbsp;
           <a target="_top" style="text-decoration: none;" href="#publications">Publications</a>
           &nbsp;&nbsp;
-          <a target="_top" style="text-decoration: none;" href="#">Presentations</a>
+          <a target="_top" style="text-decoration: none;" href="#presentations">Presentations</a>
           &nbsp;&nbsp;
         </li>
         <li><q>Some great <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">links</a> Enjoy</q></li>
@@ -61,54 +63,67 @@
 
       <hr>
 
-      <ul>
-        <li  style="list-style-type:none;">
-          Hey, I'm <b>Abhinaba</b> and I'm currently stuck in 421 loop.
-        </li>
-        <li style="list-style-type:none">
-          Hey!. Also I made some things using ChatGPT. 
+      <div style="text-align: left; display: inline-flex; justify-content: center; align-items: center;">
+        <div style="width: 90vw; height: initial; flex: 1">
           <ul>
-            <li style="list-style-type:none;">
-              <a href="tic-tac-toe.html">Tic-Tac-Toe</a>
+            <li  style="list-style-type:none;">
+              Hey, I'm <b>Abhinaba</b> and I'm currently stuck in 421 loop.
             </li>
-            <li style="list-style-type:none;">
-              <a href="guess-number.html">Guess Number Game</a>
+            <li style="list-style-type:none">
+              Hey!. Also I made some things using ChatGPT. 
+              <ul>
+                <li style="list-style-type:none;">
+                  <a href="tic-tac-toe.html">Tic-Tac-Toe</a>
+                </li>
+                <li style="list-style-type:none;">
+                  <a href="guess-number.html">Guess Number Game</a>
+                </li>
+                <li style="list-style-type:none;">
+                  <a href="simple-game.html">Simple Game</a>
+                </li>
+              </ul>
             </li>
-            <li style="list-style-type:none;">
-              <a href="simple-game.html">Simple Game</a>
+            <li style="list-style-type: none;">
+              Yeah its dumb. but who cares. I like those things.
+            </li>
+            <li style="list-style-type: none;">
+              This site {was,is,will be} under construction
             </li>
           </ul>
-        </li>
-        <li style="list-style-type: none;">
-          Yeah its dumb. but who cares. I like those things.
-        </li>
-        <li style="list-style-type: none;">
-          This site {was,is,will be} under construction
-        </li>
-      </ul>
-      <hr>
+        </div>
+
+        <div style="width: 5vw; height: initial; flex: 2">
+          I have no specific interest. I like to do things and see what happens.
+        </div>
+      </div>
     </div>
   </div>
 
-  <div id="internship" style="text-align: center; display: flex; justify-content: center; align-items: center;">
+  <hr>
+
+  <div id="internship" style="text-align: left; display: flex; justify-content: center; align-items: center;">
     <div style="width: 30vw; height: initial; flex: 1">
       I have done <strong>internships</strong> at various organisations in various fields from image processing, to MLOps, Maching Learning, Computer System Architecture etc.
     </div>
     <div style="width: 70vw; hieght: initial; flex: 2">
       <ol>
-        <li>
-          <i>Airtel Digital</i><br>
-          During summer break of my M.Tech at ISI, Kolkata I served as an Engineering Intern at Ad-Specialisation group of <strong>Airtel Digital</strong> where I worked with India scale data.~300 Million(Trust me its huge).
+        <li style="list-style-type:none;">
+          <i><strong>Airtel Digital</strong></i><br>
+          During summer break of my M.Tech at ISI, Kolkata I served as an Engineering Intern at Ad-Specialisation group of Airtel Digital where I worked with India scale data.~300 Million(Trust me its huge).<br>
+          There I made a library to detect Data Drift(A typical Machine Learning problem data scientists, ML engineer face after deploying a ML model) in the data. I tested my library on a india scale user data and integrated with the system to get better result.<br>
+          This library reduces the manual effort with the existing libraries by nearly 70%.
         </li>
-        <li>
-          <i>IIT, Kharagpur</i><br>
-          During my summer break of B.E third year at Jadavpur Univeristy I worked as research intern at <strong>IIT, Kharagpur</strong>. There I worked on satellite image classification problems.
+        <hr>
+        <li style="list-style-type: none;">
+          <i><strong>IIT, Kharagpur</strong></i><br>
+          During my summer break of B.E third year at Jadavpur Univeristy I worked as research intern at IIT, Kharagpur. There I worked on satellite image classification problems.<br>
+          Other than that I dont remember much as it was nearly >3 years ago
         </li>
       </ol>
     </div>
   </div>
 
-<hr>
+  <hr>
 
   <div id="projects" style="text-align: center; display: flex; justify-content: center; align-items: center;">
     <div style="width: 30vw; height: initial; flex: 1">
@@ -116,11 +131,11 @@
     </div>
     <div style="width: 70vw; height: initial; flex: 2">
       <ol>
-        <li>
+        <li style="list-style-type: none;">
           <i><a href="https://github.com/cohitherewer/ISI-CS/tree/main/Information%20Retrieval/Simple%20Search%20Engine" style="text-decoration:none;">Search Engine</a></i><br>
           It is a course project of Information Retrieval of ISI M.Tech CS. Here I implemented searching and retrieving documents module from scratch in Pylucene.
         </li>
-        <li>
+        <li style="list-style-type: none;">
           <i><a href="https://github.com/cohitherewer/ISI-CS/tree/main/CLAB%20Project" style="text-decoration:none">Maximum Heapable Subsequence</a></i><br>
           It is a course project for our computing lab at ISI,K. Implemented in C++.
         </li>
@@ -128,15 +143,15 @@
     </div>
   </div>
 
-<hr>
+  <hr>
 
-  <div id="publications" style="text-align: center; display: block; justify-content: center; align-items: center;">
+  <div id="publications" style="text-align: left; display: block; justify-content: center; align-items: center;">
     <div style="width: auto; height: initial; flex: 1">
       Speaking of my <strong><i>Publications</i></strong> till now I have only one publication in the domain of High Voltage Engineering and Maching Learning.
     </div>
     <div style="width: auto; height: initial; flex: 2">
       <ol>
-        
+
         <li>
           <div style="display: flex;">
             <div style="width: 80vw">
@@ -152,16 +167,50 @@
     </div>
   </div>
 
-  <div>
-    <h2>Presentations</h2>
-    <ol>
-      <li>
-        Graph Algorithms <a href="Graph Algo Presentation 1.pdf">[slide 1]</a> <a href="Graph Algo Presentation 2.pdf">[slide 2]</a>
-      </li>
-      <li>
-        Test Case Generation for SI Protocol. <a href="Test Gen SI.pdf">[slide]</a>
-      </li>
-    </ol>
+  <hr>
+
+  <div id="presentations" style="text-align: left; display: block; justify-content: center; align-items: center;">
+    <div style="width: auto; height: initial; flex: 1">
+      I have given some <i><strong>Presentations</strong></i> mainly during my M.Tech days. Listing some of them, 
+    </div>
+
+    <div style="width: auto; height: initial; flex: 2">
+      <ol>
+
+        <li>
+          <div style="display: flex;">
+            <div style="width: 50vw">
+              Graph Algorithms
+            </div>
+            <div style="width: 50vw;">
+              <ol>
+                <li>
+                  <a href="Graph Algo Presentation 1.pdf">[slide 1]</a>
+                </li>
+                <li>
+                  <a href="Graph Algo Presentation 2.pdf">[slide 2]</a>
+                </li>
+              </ol>
+            </div>
+          </div>
+        </li>
+
+        <li>
+          <div style="display: flex;">
+            <div style="width: 50vw">
+              Test Case Generation for SI Protocol.
+            </div>
+            <div style="width: 50vw;">
+              <ol>
+                <li>
+                  <a href="Test Gen SI.pdf">[slide 1]</a>
+                </li>
+              </ol>
+            </div>
+          </div>
+        </li>
+      </ol>
+    </div>
   </div>
 </body>
 </html>
