--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <li>M.Tech CS, ISI Kolkata</li>
         <li>B.E Electrical, Jadavpur University</li>
         <li>
-          <a target="_top" style="text-decoration: none;" href="#">cs2109</a>
-          AT isical.ac.in &nbsp;&nbsp;
+          <a target="_top" style="text-decoration: none;" href="#">abhinabacr</a>4
+          AT gmail [dot] com &nbsp;&nbsp;
           <a target="_top" style="text-decoration: none;" href="#internship">Internships</a>
           &nbsp;&nbsp;
           <a target="_top" style="text-decoration: none;" href="#projects">Projects</a>
@@ -58,7 +58,6 @@
           <a target="_top" style="text-decoration: none;" href="#presentations">Presentations</a>
           &nbsp;&nbsp;
         </li>
-        <li><q>Some great <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">links</a> Enjoy</q></li>
       </ul>
 
       <hr>
@@ -69,7 +68,7 @@
             <li  style="list-style-type:none;">
               Hey, I'm <b>Abhinaba</b> and I'm currently stuck in 421 loop.
             </li>
-            <li style="list-style-type:none">
+            <!-- <li style="list-style-type:none">
               Hey!. Also I made some things using ChatGPT. 
               <ul>
                 <li style="list-style-type:none;">
@@ -85,16 +84,16 @@
             </li>
             <li style="list-style-type: none;">
               Yeah its dumb. but who cares. I like those things.
-            </li>
+            </li> -->
             <li style="list-style-type: none;">
               This site {was,is,will be} under construction
             </li>
           </ul>
         </div>
 
-        <div style="width: 5vw; height: initial; flex: 2">
+        <!-- <div style="width: 5vw; height: initial; flex: 2">
           I have no specific interest. I like to do things and see what happens.
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
